# MinorCraft

./: CMakeLists.txt  README.md
Assets/Shaders/: basic.fs.glsl  basic.vs.glsl
Source/: Game.cpp  Game.h  main.cpp  mb_fileIO.h  mb_logger.cpp  mb_logger.h  mb_mesh.h  mb_shader.cpp  mb_shader.h  mb_texture.cpp  mb_texture.h  mb_window.cpp  mb_window.h  mb_world.h
